V. 0.4.1b:
Bugfixes:
- Fixed level up hand function to account for sources without iterable ability fields

V. 0.4.1:

Bugfixes:
Blade no longer crashes the game
Fixed localization issues



Balance Changes:
- Point Break changed to Rare (from Common)
- Joe Dirt now resets after each round
- Angel Hearts now resets after each hand
- Skyscraper, Lethal Weapon, The Three Musketeers (2011), The Double & Monster House
     now resets its gathered mult after defeating a boss blind
- Stripes no longer gains mult from cards drawn on the first hand
- Batman & Robin now gives +1 Mult per open joker slot
- Demonic cards now give x1 + x0.25 per non-demonic card scored, instead of a flat X3
- Wicker Man changed to Uncommon (from Common)
- Pandora now gives +2 Chips per times played.



V 0.4:

New Enhancement:
- Horror Card
- Monster Card

New Tarot:
- Slasher

New Jokers:
- 50 First Dates
- Aliens
- Baby Geniuses
- Ghostbusters
- Halloween
- The Incredible Hulk
- Jaws
- Nightmare on Elm Street
- The Number 23
- Pride & Prejudice
- The Social Network
- The Wicker Man

Bug Fixes:
- The Cookie, Gum and Candy confection no longer make the UI uninteractable