@@ -1,6 +1,7 @@
 V. 0.4.1b:
 Bugfixes:
 - Fixed level up hand function to account for sources without iterable ability fields
+- Fixed Gentlemen Prefer Blondes crashing the game
 
 V. 0.4.1:
 
